# django-db-opt-sample

./: README.md  pyproject.toml
test_app/: admin.py  models.py  serializers.py  views.py
test_app/management/commands/: setup_sample_data.py
test_app/migrations/: 0002_rename_orderitem_orderproduct.py
